# portfolio-wallet

./: LICENSE  README.md
app/: package-lock.json  package.json
app/pages/: index.tsx
server/: Cargo.toml
server/src/: alchemy_api.rs  coins_service.rs  main.rs  services.rs  tokens_service.rs
server/src/middlewares/: cors.rs
server/src/services/: nft_service.rs  token_service.rs  transaction_service.rs
