[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.91"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio = "1.23.0"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"

[dev-dependencies]
mockall = "0.11.3"
